--- a/package.json
+++ b/package.json
@@ -3,26 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "babel-cli": "^6.26.0",
+    "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "react-scripts": "0.9.5"
+    "react-scripts": "^2.0.5"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "immutable": "^3.8.2",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-draggable": "^3.0.5",
     "react-dropdown": "^1.5.0",
     "react-router-dom": "^4.3.1",
     "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1"
+    "socket.io-client": "^2.1.1",
+    "uuid": "^8.3.2"
   },
   "scripts": {
-    "start": "REACT_APP_SOCKET_SERVER=http://localhost:8000 react-scripts start",
+    "start": "REACT_APP_SOCKET_SERVER=http://localhost:8000 GENERATE_SOURCEMAP=false react-scripts start",
     "build": "REACT_APP_SOCKET_SERVER=https://react-playing-card-examples.herokuapp.com react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "sync": "aws s3 sync build/ s3://aws-website-playingcards-cqzb8"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
